Edit text in my file

--- a/_posts/0000-01-02-Glory-Dev.md
+++ b/_posts/0000-01-02-Glory-Dev.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+- I have been learning github from a long time and this time I think that I will learn it
 Use the left arrow to go back!
